--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,15 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <% if(!isAuthenticated) { %>
+        <li><a href="/login/">Login</a></li>
+        <% } else { %>
+        <li><a href="/logout/">Logout</a></li>
+        <% } %>
+      </ul>
+    </nav>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
